<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black">
    <Button
        android:id="@+id/return_button"
        android:layout_width="54dp"
        android:layout_height="wrap_content"
        android:background="?attr/homeAsUpIndicator"
        android:backgroundTint="@android:color/background_light"
        android:gravity="center" />

    <LinearLayout
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="horizontal">

    <ImageView android:id="@+id/serie_banner"
        android:layout_width="270dp"
        android:layout_height="236dp"/>

    <LinearLayout
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rating_serie_label"
            android:textColor="@color/black"
            android:textSize="@dimen/big_text_size"
            android:textStyle="bold" />

        <Button
            android:id="@+id/episode_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/orange"
            android:text="@string/episode_button"
            android:textSize="@dimen/big_text_size" />

        <TextView
            android:id="@+id/rating_serie_value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="@dimen/big_text_size" />

        <Button
            android:id="@+id/actors_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/orange"
            android:text="@string/actors_button"
            android:textSize="@dimen/big_text_size" />


    </LinearLayout>


</LinearLayout>


</LinearLayout>